--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
